Fix tree item alignment
Refs: #6981

--- a/packages/components/src/components/tree-item/style.scss
+++ b/packages/components/src/components/tree-item/style.scss
@@ -25,6 +25,6 @@
 	}
 
 	a .kol-span-wc {
-		display: block;
+		place-items: unset; // unset 'center' style from global layer
 	}
 }
